/*
 * Copyright (C) 2017-2019 Dremio Corporation. This file is confidential and private property.
 */
syntax = "proto2";
package com.dremio.exec.store.jdbc.proto;

option java_package = "com.dremio.exec.store.jdbc.proto";
option java_outer_classname = "JdbcReaderProto";
option optimize_for = SPEED;

message ColumnProperty {
  optional string key = 1;
  optional string value = 2;
}

message ColumnProperties {
  optional string column_name = 1;
  repeated ColumnProperty properties = 2; /* Can be replaced with a map in proto3. */
}

message JdbcTableXattr {
  repeated string skipped_columns = 1;
  repeated ColumnProperties column_properties = 2;
}
